# Guage-Kit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  test_data.jsonl
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
apps/guage_kit_ui/: Home.py
apps/guage_kit_ui/components/: __init__.py  metric_cards.py  recall_curve.py  run_picker.py
apps/guage_kit_ui/pages/: 1_Run_Evaluation.py  2_Results_Explorer.py  3_Compare_Runs.py
docs/: RELEASE.md  conf.py  index.md
docs/_build/: index.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle
docs/_build/_sources/: index.md.txt
docs/_build/guides/: choosing_metrics.html  embeddings_metrics.html  installing.html  llm_metrics.html  rag_metrics.html  reproducibility.html
docs/_build/html/: .buildinfo  genindex.html  objects.inv  searchindex.js
docs/guides/: rag_metrics.md  reproducibility.md
docs/maintenance/: first-release.md  github-pages.md  pypi-publishing.md
notebooks/: 01_quickstart.ipynb  02_rag_groundedness.ipynb  03_hallucination_detection.ipynb  04_embeddings_intrinsic_extrinsic.ipynb  05_custom_metrics.ipynb  06_ci_reports.ipynb
scripts/: bump_version.sh  release.py
src/guage_kit/: __init__.py  api.py  cli.py
tests/: test_api.py  test_basic.py  test_cli.py  test_embeddings.py  test_llm_quality.py  test_minimal.py  test_rag_quality.py
tests/data/: fixtures.jsonl
(+63 files in other folders)
