[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/guage_kit/__init__.py"

[project]
name = "guage-kit"
dynamic = ["version"]
description = "A unified, extensible toolkit for evaluating LLMs, RAG systems, and embeddings."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{ name = "Neo Pragnya", email = "opensource@neo-pragnya.org" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "pydantic>=2.6",
  "numpy>=1.24",
  "pandas>=2.0",
  "sacrebleu>=2.4",
  "rouge-score>=0.1.2",
  "scikit-learn>=1.3",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
neural = ["transformers>=4.41", "torch>=2.2", "bert-score>=0.3.13", "sentence-transformers>=3.0"]
judge  = ["openai>=1.40", "boto3>=1.34"]
reports = ["jinja2>=3.1", "plotly>=5.22"]
ui = ["streamlit>=1.28,<1.50"]
docs   = ["sphinx>=7.2", "myst-parser>=3.0", "sphinx-autodoc-typehints>=2.2", "sphinx-rtd-theme>=1.3"]
dev    = ["pytest>=8.2", "pytest-cov>=5.0", "mypy>=1.11", "ruff>=0.6.9", "black>=24.8.0", "isort>=5.13", "tox>=4.15", "pip-audit>=2.7", "bandit>=1.7"] 

[project.scripts]
guage-kit = "guage_kit.cli:main"